--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -1,44 +1,50 @@
-[data-dropdown]{
-    position: relative;
-    padding: 10px;
+[data-dropdown] {
+  position: relative;
+  padding: 10px;
 }
-[data-dropdown].ativo .dropdown-menu{
-    display: block;
+[data-dropdown].ativo .dropdown-menu {
+  display: block;
 }
-.dropdown-menu{    
-    position: absolute;
-    top: 38px;
-    background-color: #e54;
-    z-index: 100;
-    border: 2px solid rgb(25, 26, 26);
-    display: none;
-    animation: show .5s forwards;
+.dropdown-menu {
+  position: relative !important;
+  top: 5px;
+  background-color: #e54;
+  z-index: 100;
+  border: 2px solid rgb(25, 26, 26);
+  display: none;
+  animation: show 0.5s forwards;
 }
-[data-dropdown]:hover .dropdown-menu{
-    display: block;
+[data-dropdown]:hover .dropdown-menu {
+  display: block;
 }
-.dropdown-menu::before{
-    content: '';
-    widows: 0;
-    height: 0;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid #e54;
-    position: absolute;
-    top: -10px;
-    left: 10px;
+.dropdown-menu::before {
+  content: "";
+  widows: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #e54;
+  position: absolute;
+  top: -10px;
+  left: 10px;
 }
-.dropdown-menu li a:hover{
-    color: white;
+.dropdown-menu li a:hover {
+  color: white;
 }
 
 @keyframes show {
-    from {
-        opacity: 0;
-        transform: translate3d(0,-30px,0);
-    }
-    to{
-        opacity: 1;
-        transform: translate3d(0,0,0);
-    }
+  from {
+    opacity: 0;
+    transform: translate3d(0, -30px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+@media (max-width: 700px) {
+  [data-dropdown] .dropdown-menu {
+    display: block;
+    animation: show-up 0.3 forwards;
+  }
 }
